--- a/homeworks/homework4/homework4.tex
+++ b/homeworks/homework4/homework4.tex
@@ -78,8 +78,8 @@ F(x) = \lim_{y \to x^+} F(y)
 \item We can always achieve equality in part (d) via auxiliary randomization.
   Define
   \[
-  F^*(x; v) =  \lim_{y \to x^-} F(y) + v \cdot \Big( F(x) - \lim_{y \to x^-},
-  F(y) \Big),
+  F^*(x; v) =  \lim_{y \to x^-} F(y) + v \cdot \Big( F(x) - \lim_{y \to x^-}
+  F(y) \Big), 
   \]
   where $y \to x^-$ means that $y$ approaches $x$ from the left. Show
   empirically, by revisiting your example in part (e), that for $V \sim
