--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-04-10 12:31:48 -0700 
+%% Created for Ryan Tibshirani at 2023-04-17 12:55:41 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{savage1971elicitation,
+	author = {Leonard J. Savage},
+	date-added = {2023-04-17 12:54:43 -0700},
+	date-modified = {2023-04-17 12:55:41 -0700},
+	journal = {Journal of the American Statistical Association},
+	number = {336},
+	pages = {783--801},
+	title = {Elicitation of personal probabilities and expectations},
+	volume = {66},
+	year = {1971}}
 
 @inproceedings{podkopaev2021distribution,
 	author = {Podkopaev, Aleksandr and Ramdas, Aaditya},
@@ -1584,12 +1595,12 @@
 	volume = {13},
 	year = {2019}}
 
-@unpublished{kim2021deep,
-	author = {Taesup Kim and Rasool Fakoor and Jonas Mueller and Alexander Smola and Ryan J. Tibshirani},
+@unpublished{fakoor2021flexible,
+	author = {Rasool Fakoor and Taesup Kim and Jonas Mueller and Alexander Smola and Ryan J. Tibshirani},
 	date-added = {2021-08-31 21:56:27 -0400},
-	date-modified = {2021-08-31 22:06:46 -0400},
+	date-modified = {2023-04-17 05:58:38 -0700},
 	note = {arXiv: 2103.00083},
-	title = {Deep methods for quantile aggregation},
+	title = {Flexible model aggregation for quantile regression},
 	year = {2021}}
 
 @inproceedings{gupta2020distribution,
